[package]
name = "make-xnview-slideshow"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.91"
async-stream = "0.3.6"
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.20", features = ["cargo", "derive"] }
dirs = "5.0.1"
futures = "0.3.31"
image = "0.25.4"
jdt = { git = "ssh://git@github.com/amachang/jdt.git", version = "0.1.0" }
junk_file = "0.1.1"
md5 = "0.7.0"
mime_guess = "2.0.5"
nom-exif = { version = "2.2.1", features = ["async", "tokio"] }
num_cpus = "1.16.0"
serde = { version = "1.0.213", features = ["derive"] }
serde_json = "1.0.132"
thiserror = "1.0.65"
tokio = { version = "1.41.0", features = ["macros", "fs", "rt-multi-thread"] }
